# GraviLens

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml
docs/: api.md  api.rst  conf.py  index.md  index.rst  installation.md  requirements.txt  usage.md
docs/modules/: plotting.rst  scenarios.rst
docs/modules/core/: base.rst
docs/modules/models/: plane_wave.rst
src/GraviLens/: __init__.py  cli.py
src/gravilens/: cli.py  main.py  paraboloid.py  plane_waves.py  plotting.py  scenarios.py
src/gravilens/core/: base.py
src/gravilens/models/: plane_wave.py
tests/: test_GraviLens.py  test_plane_wave.py  test_scenarios.py
